Add lazy image loading

--- a/content/pages/3d.md
+++ b/content/pages/3d.md
@@ -1,7 +1,8 @@
 +++
 title = "3D Print Showcase"
 path = "3d"
-template = "about.html"
+assets = ["/images/3d-prints/001.jpg"]
+template = "3d.html"
 +++
 
 # 3D Prints Showcase
@@ -10,129 +11,129 @@ Since [3D Hubs changed to target big businesses more instead of makers](https://
 
 The images are in no particular order and are just a showcase of what I've been able to print over the years. Please excuse the quality of the images.
 
-![](/images/3d-prints/001.jpg)  
+<img class="lazy" data-src="/images/3d-prints/001.jpg">  
 [Panda (dual extrusion) at 125% scale](http://www.thingiverse.com/thing:640831)
 
-![](/images/3d-prints/002.jpg)  
+<img class="lazy" data-src="/images/3d-prints/002.jpg">    
 [Raspberry Pi case](http://www.thingiverse.com/thing:604915)
 
-![](/images/3d-prints/003.jpg)  
+<img class="lazy" data-src="/images/3d-prints/003.jpg">    
 [Articulated octopus scaled at 300%](http://www.thingiverse.com/thing:584405)
 
-![](/images/3d-prints/004.jpg)  
+<img class="lazy" data-src="/images/3d-prints/004.jpg">    
 [Cute sheep container](http://www.thingiverse.com/thing:283304)
 
-![](/images/3d-prints/005.jpg)  
+<img class="lazy" data-src="/images/3d-prints/005.jpg">    
 [NASA DAWN probe](http://www.thingiverse.com/thing:152195)
 
-![](/images/3d-prints/006.jpg)  
+<img class="lazy" data-src="/images/3d-prints/006.jpg">    
 [Mini vending machine](http://www.thingiverse.com/thing:250000)
 
-![](/images/3d-prints/007.jpg)  
+<img class="lazy" data-src="/images/3d-prints/007.jpg">    
 [Totoro model (dual extrusion)](http://www.thingiverse.com/thing:751247)
 
-![](/images/3d-prints/008.jpg)  
+<img class="lazy" data-src="/images/3d-prints/008.jpg">    
 [AMAZED 3D printed board game](http://www.thingiverse.com/thing:412970)
 
-![](/images/3d-prints/009.jpg)  
+<img class="lazy" data-src="/images/3d-prints/009.jpg">    
 [Marvin Keychain](http://www.thingiverse.com/thing:215703)
 
-![](/images/3d-prints/010.jpg)  
+<img class="lazy" data-src="/images/3d-prints/010.jpg">    
 Customer's order for cabinet trimming
 
-![](/images/3d-prints/011.jpg)  
+<img class="lazy" data-src="/images/3d-prints/011.jpg">    
 [Army of Marvin Keychains](http://www.thingiverse.com/thing:215703)
 
-![](/images/3d-prints/012.jpg)  
+<img class="lazy" data-src="/images/3d-prints/012.jpg">    
 [Closeup of thick layer heights achieved with E3D Volcano](http://www.thingiverse.com/thing:2007221)
 
-![](/images/3d-prints/013.jpg)  
+<img class="lazy" data-src="/images/3d-prints/013.jpg">    
 Customer's order of LG G Watch charging dock/stand
 
-![](/images/3d-prints/014.jpg)  
+<img class="lazy" data-src="/images/3d-prints/014.jpg">    
 Customer's order of a Samsung Galaxy S5 dock and a Samsung Watch stand
 
-![](/images/3d-prints/015.jpg)  
+<img class="lazy" data-src="/images/3d-prints/015.jpg">    
 [Customer's order for four Dota 2 logos](http://www.thingiverse.com/thing:933081)
 
-![](/images/3d-prints/016.jpg)  
+<img class="lazy" data-src="/images/3d-prints/016.jpg">    
 [16cm Vault Boy statuette](http://www.thingiverse.com/thing:179150)
 
-![](/images/3d-prints/017.jpg)  
+<img class="lazy" data-src="/images/3d-prints/017.jpg">    
 [Counter-Strike: Global Offensive Butterfly Knife at 125% scale](http://www.thingiverse.com/thing:666519)
 
-![](/images/3d-prints/018.jpg)  
+<img class="lazy" data-src="/images/3d-prints/018.jpg">    
 [Counter-Strike: Global Offensive Karambit](http://www.thingiverse.com/thing:334812)
 
-![](/images/3d-prints/019.jpg)  
+<img class="lazy" data-src="/images/3d-prints/019.jpg">    
 [Keychain gear at 200% size](http://www.thingiverse.com/thing:561175)
 
-![](/images/3d-prints/020.jpg)  
+<img class="lazy" data-src="/images/3d-prints/020.jpg">    
 [3DBenchy printed at 300% size](http://www.thingiverse.com/thing:763622)
 
-![](/images/3d-prints/021.jpg)  
+<img class="lazy" data-src="/images/3d-prints/021.jpg">    
 Custom Decorative Tetrominos
 
-![](/images/3d-prints/022.jpg)  
+<img class="lazy" data-src="/images/3d-prints/022.jpg">    
 [Raspberry Pi Face Case](http://www.thingiverse.com/thing:417507)
 
-![](/images/3d-prints/023.jpg)  
+<img class="lazy" data-src="/images/3d-prints/023.jpg">    
 [Adafruit Adabot](http://www.thingiverse.com/thing:367226)
 
-![](/images/3d-prints/024.jpg)  
+<img class="lazy" data-src="/images/3d-prints/024.jpg">    
 ["Concrete Fish"](http://www.thingiverse.com/thing:920396)
 
-![](/images/3d-prints/025.jpg)  
+<img class="lazy" data-src="/images/3d-prints/025.jpg">    
 Custom Slipper Symbol Pins
 
-![](/images/3d-prints/026.jpg)  
+<img class="lazy" data-src="/images/3d-prints/026.jpg">    
 [Mini Track Loader RC](http://www.thingiverse.com/thing:1000713)
 
-![](/images/3d-prints/027.jpg)  
+<img class="lazy" data-src="/images/3d-prints/027.jpg">    
 Custom RGB LED cube
 
-![](/images/3d-prints/028.jpg)  
+<img class="lazy" data-src="/images/3d-prints/028.jpg">    
 [Modified Raspberry Pi Zero case by Adafruit](http://www.thingiverse.com/thing:1165227)
 
-![](/images/3d-prints/029.jpg)  
+<img class="lazy" data-src="/images/3d-prints/029.jpg">    
 STM32 Nucleo-144 case
 
-![](/images/3d-prints/030.jpg)  
+<img class="lazy" data-src="/images/3d-prints/030.jpg">    
 Raspberry Pi Zero-based Digital Camera
 
-![](/images/3d-prints/031.jpg)  
+<img class="lazy" data-src="/images/3d-prints/031.jpg">    
 [3D Settlers of Catan](http://www.thingiverse.com/thing:26979)
 
-![](/images/3d-prints/032.jpg)  
+<img class="lazy" data-src="/images/3d-prints/032.jpg">    
 [Slime Rancher Pink Slime](http://www.thingiverse.com/thing:1613714)
 
-![](/images/3d-prints/033.jpg)  
+<img class="lazy" data-src="/images/3d-prints/033.jpg">    
 Giant Minifig Star Wars figures. [Stormtrooper](http://www.thingiverse.com/thing:170704), [Vader](http://www.thingiverse.com/thing:50300).
 
-![](/images/3d-prints/034.jpg)  
+<img class="lazy" data-src="/images/3d-prints/034.jpg">    
 [OpenRC F1](http://www.thingiverse.com/thing:1193309)
 
-![](/images/3d-prints/035.jpg)   
+<img class="lazy" data-src="/images/3d-prints/035.jpg">     
 Dual Extrusion Samples. [Frogs](http://www.thingiverse.com/thing:329436), [Globe](http://www.thingiverse.com/thing:11660).
 
-![](/images/3d-prints/036.jpg)   
+<img class="lazy" data-src="/images/3d-prints/036.jpg">     
 [Rubik's Bricks](http://www.thingiverse.com/thing:2163571)
 
-![](/images/3d-prints/037.jpg)   
+<img class="lazy" data-src="/images/3d-prints/037.jpg">     
 [Raspberry Pi Sever Rack](https://www.thingiverse.com/thing:1936196)
 
 <p><video autoplay loop><source src="/images/3d-prints/038.mp4"></video></p>  
 
 [Emmet's Gear Bearing at 300% size](http://www.thingiverse.com/thing:53451)
 
-![](/images/3d-prints/039.jpg)   
+<img class="lazy" data-src="/images/3d-prints/039.jpg">     
 Best Girlfriend Award Medal
 
-![](/images/3d-prints/040.jpg)  
+<img class="lazy" data-src="/images/3d-prints/040.jpg">    
 [3D Printed Mechanical Keyboard](https://www.thingiverse.com/thing:2704567)
 
-![](/images/3d-prints/041.jpg)   
+<img class="lazy" data-src="/images/3d-prints/041.jpg">     
 Custom 12-button controller
 
-![](/images/3d-prints/042.jpg)   
+<img class="lazy" data-src="/images/3d-prints/042.jpg">     
 [Hairy Lion](http://www.thingiverse.com/thing:2007221)
