--- a/content/pages/3d.md
+++ b/content/pages/3d.md
@@ -122,7 +122,7 @@ Dual Extrusion Samples. [Frogs](http://www.thingiverse.com/thing:329436), [Globe
 <img class="lazy" data-src="/images/3d-prints/037.jpg">     
 [Raspberry Pi Sever Rack](https://www.thingiverse.com/thing:1936196)
 
-<p><video autoplay loop><source src="/images/3d-prints/038.mp4"></video></p>  
+<p><video class="lazy" autoplay loop><source src="/images/3d-prints/038.mp4"></video></p>  
 
 [Emmet's Gear Bearing at 300% size](http://www.thingiverse.com/thing:53451)
 
