Replace media with shortcodes

--- a/content/pages/3d.md
+++ b/content/pages/3d.md
@@ -1,7 +1,6 @@
 +++
 title = "3D Print Showcase"
 path = "3d"
-assets = ["/images/3d-prints/001.jpg"]
 template = "3d.html"
 +++
 
@@ -11,129 +10,86 @@ Since [3D Hubs changed to target big businesses more instead of makers](https://
 
 The images are in no particular order and are just a showcase of what I've been able to print over the years. Please excuse the quality of the images.
 
-<img class="lazy" data-src="/images/3d-prints/001.jpg">  
-[Panda (dual extrusion) at 125% scale](http://www.thingiverse.com/thing:640831)
+{{ image(src="/images/3d-prints/002.jpg", description="Raspberry Pi case", link="http://www.thingiverse.com/thing:604915") }}
 
-<img class="lazy" data-src="/images/3d-prints/002.jpg">    
-[Raspberry Pi case](http://www.thingiverse.com/thing:604915)
+{{ image(src="/images/3d-prints/022.jpg", description="Raspberry Pi Face Case", link="http://www.thingiverse.com/thing:417507") }}
 
-<img class="lazy" data-src="/images/3d-prints/003.jpg">    
-[Articulated octopus scaled at 300%](http://www.thingiverse.com/thing:584405)
+{{ image(src="/images/3d-prints/028.jpg", description="Modified Raspberry Pi Zero case by Adafruit", link="http://www.thingiverse.com/thing:1165227") }}
 
-<img class="lazy" data-src="/images/3d-prints/004.jpg">    
-[Cute sheep container](http://www.thingiverse.com/thing:283304)
+{{ image(src="/images/3d-prints/029.jpg", description="STM32 Nucleo-144 case") }}
 
-<img class="lazy" data-src="/images/3d-prints/005.jpg">    
-[NASA DAWN probe](http://www.thingiverse.com/thing:152195)
+{{ image(src="/images/3d-prints/030.jpg", description="Raspberry Pi Zero-based Digital Camera") }}
 
-<img class="lazy" data-src="/images/3d-prints/006.jpg">    
-[Mini vending machine](http://www.thingiverse.com/thing:250000)
+{{ image(src="/images/3d-prints/037.jpg", description="Raspberry Pi Sever Rack", link="https://www.thingiverse.com/thing:1936196") }}
 
-<img class="lazy" data-src="/images/3d-prints/007.jpg">    
-[Totoro model (dual extrusion)](http://www.thingiverse.com/thing:751247)
+{{ image(src="/images/3d-prints/027.jpg", description="Custom RGB LED cube") }}
 
-<img class="lazy" data-src="/images/3d-prints/008.jpg">    
-[AMAZED 3D printed board game](http://www.thingiverse.com/thing:412970)
+{{ image(src="/images/3d-prints/031.jpg", description="3D Settlers of Catan", link="http://www.thingiverse.com/thing:26979") }}
 
-<img class="lazy" data-src="/images/3d-prints/009.jpg">    
-[Marvin Keychain](http://www.thingiverse.com/thing:215703)
+{{ image(src="/images/3d-prints/003.jpg", description="Articulated octopus scaled at 300%", link="http://www.thingiverse.com/thing:584405") }}
 
-<img class="lazy" data-src="/images/3d-prints/010.jpg">    
-Customer's order for cabinet trimming
+{{ image(src="/images/3d-prints/005.jpg", description="NASA DAWN probe", link="http://www.thingiverse.com/thing:152195") }}
 
-<img class="lazy" data-src="/images/3d-prints/011.jpg">    
-[Army of Marvin Keychains](http://www.thingiverse.com/thing:215703)
+{{ image(src="/images/3d-prints/008.jpg", description="AMAZED 3D printed board game", link="http://www.thingiverse.com/thing:412970") }}
 
-<img class="lazy" data-src="/images/3d-prints/012.jpg">    
-[Closeup of thick layer heights achieved with E3D Volcano](http://www.thingiverse.com/thing:2007221)
+{{ image(src="/images/3d-prints/014.jpg", description="Customer's order of a Samsung Galaxy S5 dock and a Samsung Watch stand") }}
 
-<img class="lazy" data-src="/images/3d-prints/013.jpg">    
-Customer's order of LG G Watch charging dock/stand
+{{ image(src="/images/3d-prints/019.jpg", description="Keychain gear at 200% size", link="http://www.thingiverse.com/thing:561175") }}
 
-<img class="lazy" data-src="/images/3d-prints/014.jpg">    
-Customer's order of a Samsung Galaxy S5 dock and a Samsung Watch stand
+{{ image(src="/images/3d-prints/021.jpg", description="Custom Decorative Tetrominos") }}
 
-<img class="lazy" data-src="/images/3d-prints/015.jpg">    
-[Customer's order for four Dota 2 logos](http://www.thingiverse.com/thing:933081)
+{{ image(src="/images/3d-prints/026.jpg", description="Mini Track Loader RC", link="http://www.thingiverse.com/thing:1000713") }}
 
-<img class="lazy" data-src="/images/3d-prints/016.jpg">    
-[16cm Vault Boy statuette](http://www.thingiverse.com/thing:179150)
+{{ video(src="/images/3d-prints/038.mp4", description="Emmet's Gear Bearing at 300% size", link="http://www.thingiverse.com") }}
 
-<img class="lazy" data-src="/images/3d-prints/017.jpg">    
-[Counter-Strike: Global Offensive Butterfly Knife at 125% scale](http://www.thingiverse.com/thing:666519)
+{{ image(src="/images/3d-prints/001.jpg", description="Panda (dual extrustion) at 125% scale", link="http://www.thingiverse.com/thing:640831") }}  
 
-<img class="lazy" data-src="/images/3d-prints/018.jpg">    
-[Counter-Strike: Global Offensive Karambit](http://www.thingiverse.com/thing:334812)
+{{ image(src="/images/3d-prints/004.jpg", description="Cute sheep container", link="http://www.thingiverse.com/thing:283304") }}
 
-<img class="lazy" data-src="/images/3d-prints/019.jpg">    
-[Keychain gear at 200% size](http://www.thingiverse.com/thing:561175)
+{{ image(src="/images/3d-prints/006.jpg", description="Mini vending machine", link="http://www.thingiverse.com/thing:250000") }}
 
-<img class="lazy" data-src="/images/3d-prints/020.jpg">    
-[3DBenchy printed at 300% size](http://www.thingiverse.com/thing:763622)
+{{ image(src="/images/3d-prints/007.jpg", description="Totoro model (dual extrusion)", link="http://www.thingiverse.com/thing:751247") }}
 
-<img class="lazy" data-src="/images/3d-prints/021.jpg">    
-Custom Decorative Tetrominos
+{{ image(src="/images/3d-prints/009.jpg", description="Marvin Keychain", link="http://www.thingiverse.com/thing:215703") }}
 
-<img class="lazy" data-src="/images/3d-prints/022.jpg">    
-[Raspberry Pi Face Case](http://www.thingiverse.com/thing:417507)
+{{ image(src="/images/3d-prints/010.jpg", description="Customer's order for cabinet trimming") }}
 
-<img class="lazy" data-src="/images/3d-prints/023.jpg">    
-[Adafruit Adabot](http://www.thingiverse.com/thing:367226)
+{{ image(src="/images/3d-prints/011.jpg", description="Army of Marvin Keychains", link="http://www.thingiverse.com/thing:215703") }}
 
-<img class="lazy" data-src="/images/3d-prints/024.jpg">    
-["Concrete Fish"](http://www.thingiverse.com/thing:920396)
+{{ image(src="/images/3d-prints/012.jpg", description="Closeup of thick layer heights achieved with E3D Volcano", link="http://www.thingiverse.com/thing:2007221") }}
 
-<img class="lazy" data-src="/images/3d-prints/025.jpg">    
-Custom Slipper Symbol Pins
+{{ image(src="/images/3d-prints/013.jpg", description="Customer's order of LG G Watch charging dock/stand") }}
 
-<img class="lazy" data-src="/images/3d-prints/026.jpg">    
-[Mini Track Loader RC](http://www.thingiverse.com/thing:1000713)
+{{ image(src="/images/3d-prints/015.jpg", description="Customer's order for four Dota 2 logos", link="http://www.thingiverse.com/thing:933081") }}
 
-<img class="lazy" data-src="/images/3d-prints/027.jpg">    
-Custom RGB LED cube
+{{ image(src="/images/3d-prints/016.jpg", description="16cm Vault Boy statuette", link="http://www.thingiverse.com/thing:179150") }}
 
-<img class="lazy" data-src="/images/3d-prints/028.jpg">    
-[Modified Raspberry Pi Zero case by Adafruit](http://www.thingiverse.com/thing:1165227)
+{{ image(src="/images/3d-prints/017.jpg", description="Counter-Strike: Global Offensive Butterfly Knife at 125% scale", link="http://www.thingiverse.com/thing:666519") }}
 
-<img class="lazy" data-src="/images/3d-prints/029.jpg">    
-STM32 Nucleo-144 case
+{{ image(src="/images/3d-prints/018.jpg", description="Counter-Strike: Global Offensive Karambit", link="http://www.thingiverse.com/thing:334812") }}
 
-<img class="lazy" data-src="/images/3d-prints/030.jpg">    
-Raspberry Pi Zero-based Digital Camera
+{{ image(src="/images/3d-prints/020.jpg", description="3DBenchy printed at 300% size", link="http://www.thingiverse.com/thing:763622") }}
 
-<img class="lazy" data-src="/images/3d-prints/031.jpg">    
-[3D Settlers of Catan](http://www.thingiverse.com/thing:26979)
+{{ image(src="/images/3d-prints/023.jpg", description="Adafruit Adabot", link="http://www.thingiverse.com/thing:367226") }}
 
-<img class="lazy" data-src="/images/3d-prints/032.jpg">    
-[Slime Rancher Pink Slime](http://www.thingiverse.com/thing:1613714)
+{{ image(src="/images/3d-prints/024.jpg", description='"Concrete Fish"', link="http://www.thingiverse.com/thing:920396") }}
 
-<img class="lazy" data-src="/images/3d-prints/033.jpg">    
-Giant Minifig Star Wars figures. [Stormtrooper](http://www.thingiverse.com/thing:170704), [Vader](http://www.thingiverse.com/thing:50300).
+{{ image(src="/images/3d-prints/025.jpg", description="Custom Slipper Symbol Pins") }}
 
-<img class="lazy" data-src="/images/3d-prints/034.jpg">    
-[OpenRC F1](http://www.thingiverse.com/thing:1193309)
+{{ image(src="/images/3d-prints/032.jpg", description="Slime Rancher Pink Slime", link="http://www.thingiverse.com/thing:1613714") }}
 
-<img class="lazy" data-src="/images/3d-prints/035.jpg">     
-Dual Extrusion Samples. [Frogs](http://www.thingiverse.com/thing:329436), [Globe](http://www.thingiverse.com/thing:11660).
+{{ image(src="/images/3d-prints/033.jpg", description="Giant Minifig Star Wars figures.", link="http://www.thingiverse.com/thing:170704") }}
 
-<img class="lazy" data-src="/images/3d-prints/036.jpg">     
-[Rubik's Bricks](http://www.thingiverse.com/thing:2163571)
+{{ image(src="/images/3d-prints/034.jpg", description="OpenRC F1", link="http://www.thingiverse.com/thing:1193309") }}
 
-<img class="lazy" data-src="/images/3d-prints/037.jpg">     
-[Raspberry Pi Sever Rack](https://www.thingiverse.com/thing:1936196)
+{{ image(src="/images/3d-prints/035.jpg", description="Dual Extrusion Samples.", link="http://www.thingiverse.com/thing:329436") }}
 
-<p><video class="lazy" autoplay loop><source src="/images/3d-prints/038.mp4"></video></p>  
+{{ image(src="/images/3d-prints/036.jpg", description="Rubik's Bricks", link="http://www.thingiverse.com/thing:2163571") }}
 
-[Emmet's Gear Bearing at 300% size](http://www.thingiverse.com/thing:53451)
+{{ image(src="/images/3d-prints/039.jpg", description="Best Girlfriend Award Medal") }}
 
-<img class="lazy" data-src="/images/3d-prints/039.jpg">     
-Best Girlfriend Award Medal
+{{ image(src="/images/3d-prints/042.jpg", description="Hairy Lion", link="http://www.thingiverse.com/thing:2007221") }}
 
-<img class="lazy" data-src="/images/3d-prints/040.jpg">    
-[3D Printed Mechanical Keyboard](https://www.thingiverse.com/thing:2704567)
+{{ image(src="/images/3d-prints/041.jpg", description="Custom 12-button controller") }}
 
-<img class="lazy" data-src="/images/3d-prints/041.jpg">     
-Custom 12-button controller
-
-<img class="lazy" data-src="/images/3d-prints/042.jpg">     
-[Hairy Lion](http://www.thingiverse.com/thing:2007221)
+{{ image(src="/images/3d-prints/040.jpg", description="3D Printed Mechanical Keyboard", link="https://www.thingiverse.com/thing:2704567") }}
